--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -75,35 +75,30 @@
                     <div id="result-table-step2">
 
                         <table border="1">
-                            <tr>
-                                <th>Компания</th>
-                                <th>Параметры</th>
-                                <th>Стоимость</th>
-                                <th>Наша стоимость</th>
-                                <th>Выбор</th>
-                            </tr>
                             {% for comp in result.info %}
                                 <tr>
                                     <td><b>{{ comp.full_name }}</b></td>
-                                    <td>
-                                        <table border="1">
-                                            {% for p in comp.parameters.items %}
-                                                <tr>
-                                                    <td>{{ p.0 }}</td>
-                                                    <td>
-                                                        {% ifequal p.1 "on" %}
-                                                            да
-                                                        {% else %}
-                                                            нет
-                                                        {% endifequal %}
-                                                    </td>
-                                                </tr>
-                                            {% endfor %}
-                                        </table>
+
+                                    {% for p in comp.parameters.items %}
+                                        {% ifequal p.1 "on" %}
+                                            <td class="small">
+
+                                                 да
+                                            </td>
+                                        {% else %}
+                                             <td class="small">
+
+                                                 нет
+                                            </td>
+                                        {% endifequal %}
+                                    {% endfor %}
+
+                       
+                                    <td class="final-price">
+                                        {{ comp.score }}
+                                        {{ comp.ourscore }}
+                                        <a href="{% url ncalc_step3 comp.alias %}">купить</a>
                                     </td>
-                                    <td><b>{{ comp.score }}</b></td>
-                                    <td><b>{{ comp.ourscore }}</b></td>
-                                    <td><a href="{% url ncalc_step3 comp.alias %}">купить</a></td>
                                 </tr>
                             {% endfor %}
                         </table>
