--- a/insurance/templates/includes/header.html
+++ b/insurance/templates/includes/header.html
@@ -23,7 +23,7 @@
 
     <div id="head-buttons">
         <a href="{% url ncalc_step1 %}" id="calc-link"><img src="{{ STATIC_URL }}images/calc_icon.png" alt="" /></a>
-        <a href="#" id="wallet-link"><img src="{{ STATIC_URL }}images/wallet_icon.png" alt="" /></a>
+        <a href="{% url userprofile_edit %}" id="wallet-link"><img src="{{ STATIC_URL }}images/wallet_icon.png" alt="" /></a>
 
         <div id="account-link">
            {% if user.is_authenticated %}
