--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2301,9 +2301,13 @@ div.messages li {
 
 /*Price Slider*/
 #id_price{
-    width: 124px;
-    border: 1px solid #501c07;
+    border: 1px solid #501C07;
     color: #676767;
+    display: block;
+    height: 20px;
+    padding: 0px 0 0 5px;
+    width: 125px;
+    font-size: 14px;
 }
 
 /*Table Error Block*/
