--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -93,7 +93,9 @@
                 </td>
                 <td class="second">
                     {{ s1_form.price }}
-                    <div id="price-slider"></div>
+                    <div id="price-slider-container">
+                        <div id="price-slider"></div>
+                    </div>
                     <span id="stoim"></span>
                 </td>
                 <td>
