Начат обработчик события для ручного ввода значения по инпуту

--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -41,6 +41,7 @@
 
     <div id="first-select" class="long-select">
         <span class="select-text"></span>
+        <input type="text" value="" />
         {{ s1_form.mark }}
         <span class="form-error">{{ s1_form.mark.errors }}</span>
     </div>
