--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2452,6 +2452,17 @@ div.messages li {
     
 }
 
+.long-select input{
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    color: #6a6a6a;
+    font-size: 16px;
+    height: 18px;
+    width: 312px;
+    border: none;
+}
+
 .long-select ul{
     position: absolute;
     top: 27px;
