--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -8,6 +8,9 @@
 
     <script type="text/javascript">
         $(function() {
+
+                    $("#sort-parameters td:even").addClass("even");
+
                     if ($("#id_burglar_alarm_group").val() == "" || $("#id_burglar_alarm_group").val() == "2")  //hardcoded no burglar alarm id.
                     {
                         $("#id_burglar_alarm_model").html('');
@@ -69,6 +72,30 @@
                             {{ s1_form.as_p }}
                             <input type="submit" value="Обновить"/>
                         </form>
+
+
+                        <table id="sort-parameters">
+                            <tr>
+                                <td>Цена</td>
+                                <td>{{ s1_form.factor_price }} </td>
+                                <td>Расположение</td>
+                                <td>{{ s1_form.factor_accessibility }}</td>
+                                <td>Быстрота покупки</td>
+                                <td>{{ s1_form.factor_service }}</td>
+                                <td rowspan="2">Качество информационной поддержки</td>
+                                <td rowspan="2">{{ s1_form.factor_qualitysupport }}</td>
+                            </tr>
+                            <tr>
+                                <td>Условия страхования</td>
+                                <td>{{ s1_form.factor_insuranceterms }}</td>
+                                <td>Популярность компании</td>
+                                <td>{{ s1_form.factor_reputation }}</td>
+                                <td>Простота выплаты</td>
+                                <td>{{ s1_form.factor_easepay }}</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </table>
                     </div>
                     </div>
 
