изменен внешний вид селектов на кастомный и дописана функция выводящая текущее значение

--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -77,21 +77,21 @@
                         <table id="sort-parameters">
                             <tr>
                                 <td>Цена</td>
-                                <td>{{ s1_form.factor_price }} </td>
+                                <td><div class="style-checkbox">{{ s1_form.factor_price }}</div> </td>
                                 <td>Расположение</td>
-                                <td>{{ s1_form.factor_accessibility }}</td>
+                                <td><div class="style-checkbox">{{ s1_form.factor_accessibility }}</div></td>
                                 <td>Быстрота покупки</td>
-                                <td>{{ s1_form.factor_service }}</td>
+                                <td><div class="style-checkbox">{{ s1_form.factor_service }}</div></td>
                                 <td rowspan="2">Качество информационной поддержки</td>
-                                <td rowspan="2">{{ s1_form.factor_qualitysupport }}</td>
+                                <td rowspan="2"><div class="style-checkbox">{{ s1_form.factor_qualitysupport }}</div></td>
                             </tr>
                             <tr>
                                 <td>Условия страхования</td>
-                                <td>{{ s1_form.factor_insuranceterms }}</td>
+                                <td><div class="style-checkbox">{{ s1_form.factor_insuranceterms }}</div></td>
                                 <td>Популярность компании</td>
-                                <td>{{ s1_form.factor_reputation }}</td>
+                                <td><div class="style-checkbox">{{ s1_form.factor_reputation }}</div></td>
                                 <td>Простота выплаты</td>
-                                <td>{{ s1_form.factor_easepay }}</td>
+                                <td><div class="style-checkbox">{{ s1_form.factor_easepay }}</div></td>
                                 <td></td>
                                 <td></td>
                             </tr>
