--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -69,67 +69,88 @@
                     <div id="sort-table">
                         <form action="" method="post">
                             {% csrf_token %}
-                            {{ s1_form.as_p }}
-                            <input type="submit" value="Обновить"/>
-                        </form>
-
 
                         <table id="sort-parameters">
                             <tr>
                                 <td>Цена</td>
-                                <td><div class="style-checkbox">{{ s1_form.factor_price }}</div> </td>
+                                <td>
+                                    <div class="style-checkbox">{{ s1_form.factor_price }}</div>
+                                </td>
                                 <td>Расположение</td>
-                                <td><div class="style-checkbox">{{ s1_form.factor_accessibility }}</div></td>
+                                <td>
+                                    <div class="style-checkbox">{{ s1_form.factor_accessibility }}</div>
+                                </td>
                                 <td>Быстрота покупки</td>
-                                <td><div class="style-checkbox">{{ s1_form.factor_service }}</div></td>
+                                <td>
+                                    <div class="style-checkbox">{{ s1_form.factor_service }}</div>
+                                </td>
                                 <td rowspan="2">Качество информационной поддержки</td>
-                                <td rowspan="2"><div class="style-checkbox">{{ s1_form.factor_qualitysupport }}</div></td>
+                                <td rowspan="2">
+                                    <div class="style-checkbox">{{ s1_form.factor_qualitysupport }}</div>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Условия страхования</td>
-                                <td><div class="style-checkbox">{{ s1_form.factor_insuranceterms }}</div></td>
+                                <td>
+                                    <div class="style-checkbox">{{ s1_form.factor_insuranceterms }}</div>
+                                </td>
                                 <td>Популярность компании</td>
-                                <td><div class="style-checkbox">{{ s1_form.factor_reputation }}</div></td>
+                                <td>
+                                    <div class="style-checkbox">{{ s1_form.factor_reputation }}</div>
+                                </td>
                                 <td>Простота выплаты</td>
-                                <td><div class="style-checkbox">{{ s1_form.factor_easepay }}</div></td>
+                                <td>
+                                    <div class="style-checkbox">{{ s1_form.factor_easepay }}</div>
+                                </td>
                                 <td></td>
                                 <td></td>
                             </tr>
                         </table>
                     </div>
-                    </div>
+            </div>
 
-                    <div id="result-table-step2">
+            <div class="form-round-block" id="economy-block">
+                <h2>Экономия</h2>
+                <p><strong>Стандартная франшиза</strong></p>
+                
+                {{ s1_form.franchise }}
+                {{ s1_form.burglar_alarm_group }}
+                {{ s1_form.burglar_alarm_model }}
+                <br/>
+                <input type="submit" value="Обновить"/>
+                </form>
+            </div>
 
-                        <table border="1">
-                            {% for comp in result.info %}
-                                <tr>
-                                    <td><b>{{ comp.full_name }}</b></td>
+            <div id="result-table-step2">
+                <table border="1">
+                    {% for comp in result.info %}
+                        <tr>
+                            <td><b>{{ comp.full_name }}</b></td>
 
-                                    {% for p in comp.parameters.items %}
-                                        {% ifequal p.1 "on" %}
-                                            <td class="small">
+                            {% for p in comp.parameters.items %}
+                                {% ifequal p.1 "on" %}
+                                    <td class="small">
 
-                                                 да
-                                            </td>
-                                        {% else %}
-                                             <td class="small">
-
-                                                 нет
-                                            </td>
-                                        {% endifequal %}
-                                    {% endfor %}
-
-                       
-                                    <td class="final-price">
-                                        {{ comp.score }}
-                                        {{ comp.ourscore }}
-                                        <a href="{% url ncalc_step3 comp.alias %}">купить</a>
+                                        да
                                     </td>
-                                </tr>
+                                {% else %}
+                                    <td class="small">
+
+                                        нет
+                                    </td>
+                                {% endifequal %}
                             {% endfor %}
-                        </table>
-                    </div>
+
+
+                            <td class="final-price">
+                                {{ comp.score }}
+                                {{ comp.ourscore }}
+                                <a href="{% url ncalc_step3 comp.alias %}">купить</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
 
 
                 {% endif %}
